tmp/LUE105.c.err
./adminaccess/codes/LUE105.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 pkplppffaf
 ^
